src/tests/errors/ivdserial/remoracyclic.ivdserial
The IVD compiler has encountered the following error:
Syntax error on line 19:
@top
 ^
Remora host class already finalized.

---------------------------------------------------
=================================Element========================================
Path: topInstance
------------------------------------------Body
-----------------------------State default
